Fixed small issues: navbar, li alignemnt

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -12,11 +12,12 @@ html, body {
     box-shadow: none;
     color: white;
     text-align: center;
+    padding: 20px 0;
 
     .navbar-brand {
       font-family: HelveticaNeue;
       color: white;
-      padding: 41px 15px;
+      padding: 21px 15px;
       line-height: 24px;
       font-weight: 600;
       font-size: 24px;
@@ -32,8 +33,8 @@ html, body {
         font-weight: 400;
         font-size: 16px;
         line-height: 24px;
-        padding-top: 44px;
-        padding-bottom: 44px;
+        padding-top: 24px;
+        padding-bottom: 24px;
       }
       &.active > a {
         background: none;
@@ -44,7 +45,7 @@ html, body {
           position: absolute;
           left: 15px;
           right: 15px;
-          bottom: 38px;
+          bottom: 18px;
           height: 2px;
           background-color: #fff;
         }
@@ -52,7 +53,13 @@ html, body {
     }
     .navbar-btn {
       width: 160px;
-      margin: 32px 0;
+      margin: 12px 0;
+    }
+
+    &.navbar-scrolled {
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 0px;
+      transition: 0.25s;
     }
   }
 
@@ -137,8 +144,7 @@ html, body {
     ol > li, ul > li {
       list-style: none;
       position: relative;
-      padding-left: 80px;
-      padding-bottom: 30px;
+      padding: 7px 0 20px 80px;
     }
     ol > li:before, .icon {
       display: block;
@@ -198,9 +204,6 @@ html, body {
 
     h2 {
       margin-bottom: 80px;
-    }
-    &.navbar-scrolled {
-      background-color: rgba(0, 0, 0, 0.5);
     }
   }
 
